# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
 
import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/resourceschedule/work_scheduler/workscheduler.gni")
 
ohos_shared_library("work_scheduler_extension_ani") {
  branch_protector_ret = "pac_ret"
  shlib_type = "ani"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
 
  cflags_cc = [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
    "-fstack-protector-strong",
    "-Os",
  ]
 
  include_dirs = [
    "${worksched_utils_path}/include",
    "${worksched_frameworks_path}/include",
    "${worksched_frameworks_path}/extension/include",
    "include",
    "${worksched_service_path}/zidl/include",
  ]
  sources = [
    "${worksched_frameworks_path}/extension/src/work_scheduler_extension.cpp",
    "${worksched_frameworks_path}/extension/src/work_scheduler_extension_context.cpp",
    "${worksched_service_path}/zidl/src/work_scheduler_stub_ani.cpp",
    "src/ani_work_scheduler_extension.cpp",
    "src/ani_work_scheduler_extension_context.cpp",
  ]
 
  deps = [
    "${worksched_frameworks_path}:workschedclient",
    "${worksched_utils_path}:workschedutils",
    "${worksched_zidl_path}:workschedservice_zidl_stub",
  ]
 
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:ani_common",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:runtime",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "napi:ace_napi",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
  ]
 
  subsystem_name = "resourceschedule"
  innerapi_tags = [ "platformsdk" ]
  part_name = "${worksched_native_part_name}"
}
 
generate_static_abc("workscheduler_extension_context_abc") {
  base_url = "./ets"
  files = [ "./ets/application/WorkSchedulerExtensionContext.ets" ]
  dst_file = "$target_out_dir/workscheduler_extension_context_abc.abc"
  out_puts = [ "$target_out_dir/workscheduler_extension_context_abc.abc" ]
 
  is_boot_abc = "True"
  device_dst_file = "/system/framework/workscheduler_extension_context_abc.abc"
}
 
ohos_prebuilt_etc("workscheduler_extension_context_etc") {
  source = "$target_out_dir/workscheduler_extension_context_abc.abc"
  module_install_dir = "framework"
  part_name = "${worksched_native_part_name}"
  subsystem_name = "resourceschedule"
  deps = [ ":workscheduler_extension_context_abc" ]
}
 
generate_static_abc("workscheduler_extension_ability_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.WorkSchedulerExtensionAbility.ets" ]
  dst_file = "$target_out_dir/workscheduler_extension_ability_abc.abc"
  out_puts = [ "$target_out_dir/workscheduler_extension_ability_abc.abc" ]
 
  is_boot_abc = "True"
  device_dst_file = "/system/framework/workscheduler_extension_ability_abc.abc"
}
 
ohos_prebuilt_etc("workscheduler_extension_ability_etc") {
  source = "$target_out_dir/workscheduler_extension_ability_abc.abc"
  module_install_dir = "framework"
  part_name = "${worksched_native_part_name}"
  subsystem_name = "resourceschedule"
  deps = [ ":workscheduler_extension_ability_abc" ]
}
 
group("workschedulerextension_ani") {
  deps = [
    ":work_scheduler_extension_ani",
    ":workscheduler_extension_ability_etc",
    ":workscheduler_extension_context_etc",
  ]
}