# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//ark/ts2abc/ts2panda/ts2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/resourceschedule/work_scheduler/workscheduler.gni")

ts2abc_gen_abc("gen_work_scheduler_extension_abc") {
  src_js = rebase_path("work_scheduler_extension.js")
  dst_file = rebase_path(target_out_dir + "/work_scheduler_extension.abc")
  in_puts = [ "work_scheduler_extension.js" ]
  out_puts = [ target_out_dir + "/work_scheduler_extension.abc" ]
  extra_args = [ "--module" ]
}

gen_js_obj("work_scheduler_extension_js") {
  input = "work_scheduler_extension.js"
  output = target_out_dir + "/work_scheduler_extension.o"
}

gen_js_obj("work_scheduler_extension_abc") {
  input = get_label_info(":gen_work_scheduler_extension_abc",
                         "target_out_dir") + "/work_scheduler_extension.abc"
  output = target_out_dir + "/work_scheduler_extension_abc.o"
  dep = ":gen_work_scheduler_extension_abc"
}

ohos_shared_library("workschedulerextension_napi") {
  sources = [ "work_scheduler_extension_module.cpp" ]

  deps = [
    ":work_scheduler_extension_abc",
    ":work_scheduler_extension_js",
  ]

  external_deps = [ "napi:ace_napi" ]

  relative_install_dir = "module"
  part_name = "${worksched_native_part_name}"
  subsystem_name = "resourceschedule"
}
